[gd_scene load_steps=5 format=3 uid="uid://di4jif4uccblc"]

[ext_resource type="Script" path="res://mailbox.gd" id="1_8tep4"]
[ext_resource type="Texture2D" uid="uid://cxgeokycem5wl" path="res://assets/mailbox.png" id="1_hqjyu"]

[sub_resource type="SpriteFrames" id="SpriteFrames_cfgoe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_hqjyu")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ed1dk"]
size = Vector2(128, 166.25)

[node name="Mailbox" type="Node2D" groups=["mailbox"]]
script = ExtResource("1_8tep4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_cfgoe")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -12.875)
shape = SubResource("RectangleShape2D_ed1dk")

[node name="EventLabel" type="Label" parent="."]
visible = false
offset_left = -48.0
offset_top = -104.0
offset_right = 105.0
offset_bottom = -81.0
text = "\"E\" to open"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
